--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -23,6 +23,126 @@
 #  repository:
 #    lien:
 
+################################################################################
+
+- name:       Projet Moteur Physique 2021
+  image:
+    name:     /assets/img/MoteurPhysiqueJV.png
+    alt:      Moteur Physique Jeu Vidéo
+  title:
+    fr:       <i class="fas fa-cube"></i> Moteur Physique de Jeu Vidéo<br>3<sup>ème</sup> trimestre 2021
+    en:       <i class="fas fa-cube"></i> Video Game's Physic Engine<br>3<sup>rd</sup> quarter 2021
+  content:
+    fr:       "Projet en groupe de 3, réalisation d'un moteur physique basique pour le jeu vidéo avec la prise en charge de forces, contraintes et détection de collisions sur des rigidbody.<br>
+                Outre la partie mathématique, je me suis chargé de la structure du projet en C++ après une refonte graphique à l'aide d'ImGUI et OpenGL3 pour avoir un rendu 3D de la scène, des aides graphiques pour le debug, un inspecteur et une console."
+    en:       "roject in group of 3, realization of a basic physics engine for the video game with the support of forces, constraints and collision detection on rigidbody.<br>
+                Besides the mathematical part, I was in charge of the structure of the project in C++ after a graphical redesign using ImGUI and OpenGL3 to have a 3D rendering of the scene, graphical aids for debugging, an inspector and a console."
+
+  # website:
+  #   lien:   ""
+  #   txt:
+  #     fr:
+  #     en:
+  repository:
+    lien:     "https://github.com/AntTBD/MoteurJV"
+
+################################################################################
+
+- name:       Projet Krom'Island 2021
+  image:
+    name:     /assets/img/Krom'Island.png
+    alt:      Krom'Island
+  title:
+    fr:       <i class="fas fa-gamepad"></i> Jeu Vidéo Krom'Island<br>3<sup>ème</sup> trimestre 2021
+    en:       <i class="fas fa-gamepad"></i> Krom'Island Video Game<br>3<sup>rd</sup> quarter 2021
+  content:
+    fr:       "Projet en groupe de 6, des documents de conception au développement d'un jeu vidéo basé sur le thème \"mystère\" en multijoueur en ligne: Krom'Island.<br>
+                3 enquêteurs sont à la recherche d'un criminel mais l'île altère leur vision chromatique de façon aléatoire ! Saurez-vous retrouver le criminel ?<br>
+                Ayant le plus de connaissance, je me suis occupé de la synchronisation du travail de chacun, la résolution des bugs, la transmission de savoir, la mise en place du multijoueur et une partie de l'interface."
+    en:       "Group project of 6, from design documents to development of a video game based on the theme \"mystery\" in online multiplayer.<br>
+                3 investigators are looking for a criminal but the island randomly alters their color vision! Can you find the criminal?<br>
+                Having the most knowledge, I took care of the synchronization of the work of each one, the resolution of the bugs, the transmission of knowledge, the implementation of the multiplayer and a part of the interface."
+
+  # website:
+  #   lien:   ""
+  #   txt:
+  #     fr:
+  #     en:
+  repository:
+    lien:     "https://github.com/AntTBD/UQAC_Game"
+
+################################################################################
+
+- name:       IA Sudoku Solver 2021
+  image:
+    name:     /assets/img/IASudokuSolver.jpg
+    alt:      IA Sudoku Solver
+  title:
+    fr:       <i class="fas fa-brain"></i> IA Solveur de Sudoku<br>Novembre 2021
+    en:       <i class="fas fa-brain"></i> Sudoku Solver AI<br>November 2021
+  content:
+    fr:       "Projet en binôme, réalisation d'une intelligence artificielle avec des algorithmes de CSP (Problème de Satisfaction de Contraintes) pour la résolution de Sudoku le plus rapidement possible, peu importe la difficulté.<br>
+                Son interface en console permet de choisir entre le Backtracking, AC-3, MRV (Minimum Remaining Values), Degree Heuristic et LCV (Least Contraining Value)."
+    en:       "Project in binomial, realization of an artificial intelligence with CSP (Constraint Satisfaction Problem) algorithms for solving Sudoku as fast as possible, whatever the difficulty.<br>
+                Its console interface allows to choose between Backtracking, AC-3, MRV (Minimum Remaining Values), Degree Heuristic and LCV (Least Contraining Value)."
+
+  # website:
+  #   lien:   ""
+  #   txt:
+  #     fr:
+  #     en:
+  # repository:
+  #   lien:   "https://github.com/AntTBD/IAVacuumRobot"
+
+################################################################################
+
+- name:       WonderJam UQAC 2021
+  image:
+    name:     /assets/img/ClaudNected.png
+    alt:      ClaudNected
+  title:
+    fr:       <i class="fas fa-gamepad"></i> WonderJam UQAC<br>Octobre 2021
+    en:       <i class="fas fa-gamepad"></i> WonderJam UQAC<br>October 2021
+  content:
+    fr:       "Challenge en équipe où il faut créer un jeu en seulement 72h ! Le thème de cette année fut : \"La Connection\" avec les styles : gestion, chance et progression.<br>
+                Nous avons participé à l'édition 2021 à Chicoutimi, CA avec la \"Team Claude 3000\". Retrouvez les informations sur notre participation et sur notre production durant ce challenge.<br>
+                Après la fin de l'évènement, j'ai amélioré le jeu pour enlever les bugs et finir les idées d'implémentations originales puis je l'ai porté sur Android."
+    en:       "Team challenge where you have to create a game in only 72h! This year's theme was: \"The Connection\" with styles: management, luck and progression.<br>
+                We participated in the 2021 edition in Chicoutimi, CA with the \"Team Claude 3000\". Get information about our participation and our production during this challenge.<br>
+                Once the event was over, I improved the game to remove bugs and finish the original implementation ideas, then ported it to Android."
+  website:
+    lien:     "https://itch.io/jam/-wonderjam-uqac-2021-propuls-par-ubisoft-saguenay/rate/1231056"
+    txt:
+      fr:     <i class="fas fa-gamepad"></i> Page du jeu
+      en:     <i class="fas fa-gamepad"></i> Game page
+  repository:
+    lien:     "https://github.com/AntTBD/WonderJam2021"
+
+################################################################################
+
+- name:       IA Vacuum Robot 2021
+  image:
+    name:     /assets/img/IAVacuumRobot.png
+    alt:      IA Vacuum Robot
+  title:
+    fr:       <i class="fas fa-brain"></i> IA robot aspirateur<br>Septembre 2021
+    en:       <i class="fas fa-brain"></i> Vacuum Robot AI<br>September 2021
+  content:
+    fr:       "Projet en binôme, réalisation d'une intelligence artificielle avec un algorithme glouton capable de choisir son chemin pour aller à sa destination.<br>
+                Ce projet dispose d'une interface en console, le robot aspirateur R essaie de nettoyer la saleté D et évite de ramasser les bijoux J avec une perte batterie au fur et à mesure des déplacements."
+    en:       "Project in binomial, realization of an artificial intelligence with a gluttonous algorithm able to choose its way to its destination.<br>
+                This project has a console interface, the robot vacuum cleaner R is trying to clean the dirt D and avoids pick up jewels J with battery loss as it moves."
+
+  # website:
+  #   lien:   ""
+  #   txt:
+  #     fr:
+  #     en:
+  # repository:
+  #   lien:   "https://github.com/AntTBD/IAVacuumRobot"
+
+################################################################################
+
 - name:       Projet Cours Virtuel 2021
   image:
     name:     /assets/img/ProjetCoursVirtuel.png
@@ -31,9 +151,9 @@
     fr:       <i class="fas fa-vr-cardboard"></i> Projet Cours Virtuel<br>1<sup>er</sup> trimestre 2021
     en:       <i class="fas fa-vr-cardboard"></i> Virtual Classroom Project<br>1<sup>st</sup> quarter 2021
   content:
-    fr:       "Projet en groupe afin de prouver que les cours à distance peuvent se faire comme si on était dans une vraie classe grâce à la réalité virtuelle (Oculus Quest).<br>
+    fr:       "Projet en groupe de 5, afin de prouver que les cours à distance peuvent se faire comme si on était dans une vraie classe grâce à la réalité virtuelle (Oculus Quest).<br>
                 Étant chef de projet, j'ai mené à bien mon équipe pour reproduire les même sensations qu'en présenciel. On a ainsi la possibilité de créer un cours et le rejoindre en multi-joueur, écrire au tableau, projeter un diaporama, parler/écouter, s'asseoir et avoir une duplication du diaporama et du tableau en temps réel."
-    en:       "Group project to prove that distance learning can be done as if you were in a real class thanks to virtual reality (Oculus Quest). <br>
+    en:       "Group project of 5, to prove that distance learning can be done as if you were in a real class thanks to virtual reality (Oculus Quest). <br>
                 As a project manager, I carried out my team to reproduce the same sensations as in presenciel. We have the possibility to create a course and join it in multiplayer, write on the board, project a slideshow, talk/listen, sit down and have a duplication of the slideshow and the board in real time."
 
   # website:
@@ -285,9 +405,9 @@
     fr:       <i class="fas fa-globe"></i> Nuit de l'info<br>Décembre 2018
     en:       <i class="fas fa-globe"></i> Nuit de l'info<br>December 2018
   content:
-    fr:        "La Nuit de l'info est un challenge en équipe où il faut réaliser un site en une seule nuit ! Le thème de cette année fut : \"<i>L’assistance numérique d’un explorateur en conditions extrêmes</i>\"<br>
+    fr:        "La Nuit de l'info est un challenge en équipe où il faut réaliser un site en une seule nuit ! Le thème de cette année fut : \"<i>L’assistance numérique d’un explorateur en conditions extrêmes</i>\".<br>
               Nous avons participé à l'édition 2018 à Limoges avec l'équipe \"Crab'Gang\". Retrouvez les informations sur notre participation et sur notre production durant ce challenge."
-    en:        "The \"Nuit de l'info\" is a team challenge where you have to create a site in just one night ! This year’s theme was: \"<i>Digital Assistance from an Explorer in Extreme Conditions</i>\"<br>
+    en:        "The \"Nuit de l'info\" is a team challenge where you have to create a site in just one night ! This year’s theme was: \"<i>Digital Assistance from an Explorer in Extreme Conditions</i>\".<br>
               We took part in the 2018 edition in Limoges with the team \"Crab'Gang\". Get information about our participation and our production during this challenge."
   ranking:
     - link:   ""
