--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title:         "Antoine TABARAUD"
 image:         "/assets/img/logo site2.png"
 keywords:      "Antoine TABARAUD, TABARAUD, Antoine TBD, AntTBD, Ant TBD"
 favicon:       "/assets/img/favicon.ico"
-url:           "http://localhost" #"https://anttbd.github.io"
+url:           "https://anttbd.github.io" #"http://localhost"
 
 lastUpdate:
     fr:        "decembre 2021"
